Try to fix caption alignment

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -147,6 +147,8 @@ figure {
   margin: 0;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
   @include clearfix();
   img {
     margin-bottom: 10px;
@@ -175,6 +177,7 @@ figure {
       }
       figcaption {
         clear: left;
+        text-align: center;
       }
     }
   }
